# haste

./: CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/: dependabot.yml
.github/workflows/: publish.yml  pull_request.yml  release-plz.yml
example/: Cargo.toml
example/benches/: main.rs
example/src/: lib.rs
haste-derive/: Cargo.toml
haste-derive/src/: args.rs  func.rs  lib.rs
haste-macros/: Cargo.toml
haste-macros/src/: args.rs  func.rs  lib.rs
src/: bench_result.rs  bencher.rs  cli.rs  config.rs  label.rs  lib.rs  sample.rs  sampling_mode.rs  throughput.rs
