[workspace]
members = ["example", "haste-macros"]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0-alpha.1"

[package]
description = "A work-in-progress benchmarking crate."
name = "haste"

edition.workspace = true
license.workspace = true
version.workspace = true

[features]
tokio = ["dep:tokio"]

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
haste-macros = { version = "0.1.0-alpha.1", path = "haste-macros" }
linkme = "0.3.33"
regex = "1.11.1"
tokio = { version = "1.47.1", optional = true, features = ["rt-multi-thread"] }


[profile.debug-release]
debug = true
inherits = "release"
