[workspace]
members = ["example", "haste-macros"]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0-alpha.2"

[package]
description = "A work-in-progress benchmarking crate."
name = "haste"

edition.workspace = true
license.workspace = true
version.workspace = true

[features]
tokio = ["dep:tokio"]

[dependencies]
clap = { version = "4.5.59", features = ["derive"] }
haste-macros = { version = "=0.1.0-alpha.2", path = "haste-macros" }
linkme = "0.3.35"
regex-lite = "0.1.9"
tokio = { version = "1.49.0", optional = true, features = ["rt-multi-thread"] }


[profile.debug-release]
debug = true
inherits = "release"
